--- a/retilla/Info.plist
+++ b/retilla/Info.plist
@@ -21,6 +21,8 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb397956600662692</string>
@@ -31,7 +33,15 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.41622738363-br96m1kiq46jkuv7ruev5c0nuko9psut</string>
+				<string>com.googleusercontent.apps.41622738363-0lqlco8rni6k12jd6veul6eeleri0efp</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.satkis.retilla</string>
 			</array>
 		</dict>
 	</array>
@@ -51,7 +61,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) would like to access your camera for you to take a post photo</string>
+	<string>wasteBud would like to access your camera for you to take a post photo</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Location is needed to show posted items on map</string>
 	<key>NSLocationAlwaysUsageDescription</key>
@@ -59,7 +69,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location is needed to show posted items on map</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>$(PRODUCT_NAME) would like to access your photos for you to select a post photo</string>
+	<string>wasteBud would like to access your photos for you to select a post photo</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
